[#114660483] Allow  owner of the course to add lessons.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,7 @@ AllCops:
     - 'tmp/**/*'
     - 'bin/*'
     - 'db/schema.rb'
+    - 'db/migrate/*'
   TargetRubyVersion: 2.2
   DisplayCopNames: true
 
