--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
     - 'bin/*'
     - 'db/schema.rb'
     - 'db/migrate/*'
+    - 'app/helpers/*'
   TargetRubyVersion: 2.2
   DisplayCopNames: true
 
